--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>CV - Stelian</title>
  <center><table border="0">
  <tr> 
-<td><img src="eu.jpg" alt="HTML5 Icon" width="200" height="190"></td>
+<td><img src="eu.jpg" alt="eu" width="200" height="190"></td>
 <td><p><strong>Toth Stelian Razvan</strong></p>
 <p>23 de ani / M / Cluj</p>
 <p><font color="#FF0000">Telefon: </font> 0724036765</p>
